# workoutgen

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml
enduWorkoutGen/: workout_dashboard.py  workoutgen.py
