[tool.poetry]
name = "endu-workout-gen"
version = "0.1.0"
description = ""
authors = ["timpara"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.18.2"
plotly = "^5.24.1"
dash-bootstrap-components = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
